--- a/goog/index.html
+++ b/goog/index.html
@@ -35,7 +35,7 @@
 	<div id="googtainer"></div>
 
 	<div id="sidemenu" class="sm sm-closed">
-		<a aria-label="code" href="/github" target="GithubTarget">
+		<a aria-label="code" href="//soggy.cat/github" target="GithubTarget">
 			<div class = "sm-button">
 				<img src='//soggy.cat/img/code.svg'>
 				<p>code</p>
