trinkets and other

--- a/billy/index.html
+++ b/billy/index.html
@@ -21,7 +21,7 @@
 <body data-soggy-pagetype="vtilt-js">
     <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.05" alt="a picture of BILLY??">
 
-	<div id="sidemenu" class="sm sm-closed">
+	<div id="sidemenu" class="sm sm-closed" inert>
 		<a aria-label="code" href="/github" target="GithubTarget">
 			<div class = "sm-button">
 				<img src='/img/code.svg'>
