--- a/search/index.html
+++ b/search/index.html
@@ -23,7 +23,7 @@
 
 	<img id="soggycat" src="https://soggy.cat/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
 
-	<div id="sidemenu" class="sm sm-closed">
+	<div id="sidemenu" class="sm sm-closed" inert>
 		<a aria-label="code" href="/github" target="GithubTarget">
 			<div class = "sm-button">
 				<img src='/img/code.svg'>
