--- a/goog/index.html
+++ b/goog/index.html
@@ -34,7 +34,7 @@
 	<script type="module" src="index.js"></script>
 	<div id="googtainer"></div>
 
-	<div id="sidemenu" class="sm sm-closed">
+	<div id="sidemenu" class="sm sm-closed" inert>
 		<a aria-label="code" href="//soggy.cat/github" target="GithubTarget">
 			<div class = "sm-button">
 				<img src='//soggy.cat/img/code.svg'>
