--- a/invite/index.html
+++ b/invite/index.html
@@ -26,7 +26,7 @@
 	<div id="googtainer"></div>
 
 	
-	<div id="sidemenu" class="sm sm-closed">
+	<div id="sidemenu" class="sm sm-closed" inert>
 		<a aria-label="code" href="/github" target="GithubTarget">
 			<div class="sm-button">
 				<img src='/img/code.svg'>
