set languanges to english, capitalize charset

--- a/billy/index.html
+++ b/billy/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>billy...</title>
 	<link rel="icon" href="/billy/icon.webp">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 
 	<meta name="title" content="william">
 	<meta property="og:title" content="william">
