--- a/billy/nocss/index.html
+++ b/billy/nocss/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link rel="icon" href="/billy/icon.webp">
   <title>billy...</title>
   <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta property="og:title" content="william">
   <meta property="og:description" content="a picture of BILLY??">
   <meta property="og:image" content="/billy/billy.webp">
