--- a/discord/index.html
+++ b/discord/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 				
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<title>&#65279;</title>
 		<meta property="og:title" content="soggy world" />
 		<meta name="description" content="our very sleepy discord" />
