--- a/dry/index.html
+++ b/dry/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>dry?? cat</title>
 	<link rel="icon" href="/dry/icon.webp">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 
 	<meta name="title" content="dry?? cat">
 	<meta property="og:title" content="dry?? cat">
