--- a/goog/index.html
+++ b/goog/index.html
@@ -5,7 +5,7 @@
 	<link rel="icon" href="img/goog.webp">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 
 	<meta name="title" content="Goog...">
 	<meta property="og:title" content="Goog...">
