--- a/stop/index.html
+++ b/stop/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <title>🚫</title>
      <link rel="icon" href="https://s.soggy.cat/assets/images/soggymask.webp" />
     <meta name="theme-color" content="#000000"/>
