--- a/team/death/index.html
+++ b/team/death/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<title>&#65279;</title>
 		<meta property="og:title" content="AAHGHHHH HELP HELP!!!!!" />
 		<meta name="description" content="ITS SNOWINNGGG!!! AHHH!!!!" />
