--- a/team/index.html
+++ b/team/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
 	
-	<meta charset="utf-8" />
+	<meta charset="UTF-8"/>
 	<title>&#65279;</title>
-	<meta property="og:title" content="@ssoggycat" />
-	<meta name="description" content="our very sleepy crew" />
+	<meta property="og:title" content="@ssoggycat">
+	<meta name="description" content="our very sleepy crew">
 	
 	<link rel="icon" href="assets/images/soggymask.webp" />
 	
