--- a/2024election/index.html
+++ b/2024election/index.html
@@ -3,7 +3,7 @@
   <html lang="en">
     <head>
 
-      <meta charset="utf-8" />
+      <meta charset="UTF-8" />
       <title>&#65279;</title>
       <meta property="og:title" content="VOTE NOW" />
       <meta name="description" content="You've been tasked with saving an oddly small sopping wet cat from drowning in a bathtub. Would you have enough kindness to save it from its demise?" />
