--- a/dry/nocss/index.html
+++ b/dry/nocss/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="/dry/icon.webp">
   <title>dry?? cat</title>
   <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta property="og:title" content="dry?? cat">
   <meta property="og:description" content="a picture of a dry cat inside a bathtub.">
   <meta property="og:image" content="/img/soggycat.webp">
