--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Waiting room</title>
 		<link rel="icon" href="icon.webp">
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	</head>
 	<body style="margin: 0px; padding: 0px;">
