--- a/goog/nocss/index.html
+++ b/goog/nocss/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link rel="icon" href="/goog/img/goog.webp">
   <title>Goog...</title>
   <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta property="og:title" content="Goog...">
   <meta property="og:description" content="Goog...">
   <meta property="og:image" content="/goog/img/goog.webp">
