--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>soggy cat</title>
 	<link rel="icon" href="favicon.ico">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 
 	<meta name="title" content="soggy cat">
 	<meta property="og:title" content="soggy cat">
