--- a/invite/index.html
+++ b/invite/index.html
@@ -5,7 +5,7 @@
 	<link rel="icon" href="img/icon.webp">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 
 	<link rel="stylesheet" href="/static/soggycat/main.css">
 	<link rel="stylesheet" href="invite.css">
