--- a/nocss/index.html
+++ b/nocss/index.html
@@ -4,7 +4,7 @@
 	<link rel="icon" href="/favicon.ico">
 	<title>soggy cat</title>
 	<meta name="robots" content="index, follow">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta property="og:title" content="soggy cat">
 	<meta property="og:description" content="a picture of a wet cat inside a bathtub.">
 	<meta property="og:image" content="/img/soggycat.webp">
