--- a/team/popcap/embed/index.html
+++ b/team/popcap/embed/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://s.soggy.cat/popcap/assets/popcap.png" />
     <title>snoo pingas usual i see</title>
