--- a/team/popcap/games/chuzzle/index.html
+++ b/team/popcap/games/chuzzle/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>furball paradise</title>
   <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
