--- a/wii/billy/index.html
+++ b/wii/billy/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link rel="icon" href="/wii/billy/icon.jpg">
   <title>billy... wii edition</title>
   <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta property="og:title" content="william">
   <meta property="og:description" content="alternative to soggy.cat/billy/nocss. supports the wii's web browser by using JPEG.">
   <meta property="og:image" content="/wii/billy/billy.jpg">
