--- a/wii/dry/index.html
+++ b/wii/dry/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link rel="icon" href="/wii/dry/icon.jpg">
   <title>dry??? cat??? on da wii????</title>
   <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta property="og:title" content="dry??? cat??? on da wii????">
   <meta property="og:description" content="alternative to soggy.cat/dry/nocss. supports the wii's web browser by using JPEG.">
   <meta property="og:image" content="/wii/dry/dry.jpg">
