--- a/team/index.html
+++ b/team/index.html
@@ -62,7 +62,7 @@
     </a>
     <a class="buddy right" style="width:150px;margin-top:100px" href="//discord.com/users/397799821500612638">
       <img src="/assets/images/pfp/mat.webp">
-      <span class="bigtext">Mat</span>
+      <span class="bigtext">mat</span>
       <span class="smalltext">m5x11 • she/her</span>
     </a>
 
@@ -84,6 +84,10 @@
     <a class="small buddy" style="width:50px">
       <img src="/assets/images/pfp/fancycoach.webp">
       <span class="smalltext padtop">coach</span>
+    </a>
+    <a class="small buddy" style="width:50px" href="//x.com/nullcultured">
+      <img src="/assets/images/pfp/goob.webp">
+      <span class="smalltext padtop">goob</span>
     </a>
     <a class="small buddy" style="width:50px" href="//x.com/sho_buh">
       <img src="/assets/images/pfp/shobe.webp">
