fixed for REAL now???? gee

--- a/404.html
+++ b/404.html
@@ -202,23 +202,23 @@
 
     <a class="amini">huh? why is this needed?</a>
     <audio class="audio2">
-      <source src="/assets/audio/fanfare.opus" type="audio/ogg">
+      <source src="//s.soggy.cat/assets/audio/fanfare.opus" type="audio/ogg">
     </audio>
 
   </div>
-  <img class="dilemma" draggable="false" src="/assets/images/autoplay.webp">
+  <img class="dilemma" draggable="false" src="//s.soggy.cat/assets/images/autoplay.webp">
 
   <a class="bgtext">404</a>
 
   <video class="video" controls preload="metadata">
-    <source src="/assets/videos/404.mp4" type="video/mp4">
-    <track label="English" kind="subtitles" srclang="en" src="/assets/static/404.vtt" default>
+    <source src="//s.soggy.cat/assets/videos/404.mp4" type="video/mp4">
+    <track label="English" kind="subtitles" srclang="en" src="//s.soggy.cat/assets/static/404.vtt" default>
   </video>
   <canvas id="canvas"></canvas>
   <div class="subtitles"></div>
 
   <audio class="audio">
-    <source src="/assets/audio/fromthestart.opus" type="audio/ogg">
+    <source src="//s.soggy.cat/assets/audio/fromthestart.opus" type="audio/ogg">
   </audio>
 
 </body>
