--- a/nocss/index.html
+++ b/nocss/index.html
@@ -10,6 +10,6 @@
 	<meta property="og:image" content="/img/soggycat.webp">
 </head>
 <body role="main">
-	<img src="/img/soggycat.jpg" width="50%" alt="a picture of a wet cat inside a bathtub.">
+	<img src="/img/soggycat.jpg" width="100%" height="100%" alt="a picture of a wet cat inside a bathtub.">
 </body>
 </html>
