--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
-
+	
 	<meta name="title" content="soggy cat">
 	<meta property="og:title" content="soggy cat">
 
@@ -14,6 +14,8 @@
 	<meta property="og:description" content="a picture of a wet cat inside a bathtub.">
 
 	<meta property="og:image" content="/img/soggycat.webp">
+	<meta name="theme-color" content="#ffcc5f" />
+
 	<link rel="stylesheet" href="/static/soggycat/main.css">
 </head>
 
