hastily add color schemes
this isn't working what do i do

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<meta property="og:description" content="a picture of a wet cat inside a bathtub.">
 
 	<meta property="og:image" content="/img/soggycat.webp">
+
+	<meta name="color-scheme" content="light" />
 	<meta name="theme-color" content="#ffcc5f" />
 
 	<link rel="stylesheet" href="/static/soggycat/main.css">
