more support for mobile + contribution changes
this is a big change and may break some stuff. finally though!! separated sidemenu!!!

--- a/billy/index.html
+++ b/billy/index.html
@@ -4,7 +4,7 @@
 	<title>billy...</title>
 	<link rel="icon" href="/billy/icon.webp">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta charset="UTF-8">
 
 	<meta name="title" content="william">
@@ -14,11 +14,16 @@
 	<meta property="og:description" content="a picture of BILLY??">
 
 	<meta property="og:image" content="/billy/billy.webp">
+	<meta name="color-scheme" content="light"/>
+	<meta name="theme-color" content="#c6b192"/>
+
 	<link rel="stylesheet" href="/static/soggycat/main.css">
+	<link rel="stylesheet" href="/static/soggycat/sidemenu.css">
 	<link rel="stylesheet" href="billy.css">
 </head>
 
 <body data-soggy-pagetype="vtilt-js">
+	<div class="gradient-background"></div>
     <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.05" alt="a picture of BILLY??">
 
 	<div id="sidemenu" class="sm sm-closed" inert>
@@ -50,7 +55,7 @@
     <input type="file" id="picker" style="display: none" accept="image/*" />
 
 	<script src="/static/soggycat/main.js"></script>
-	
+
 	<script src='/static/other/vanillatilt.js'></script>
 	<script src="/static/other/color-thief.umd.js"></script>
 </body>
