--- a/dry/index.html
+++ b/dry/index.html
@@ -4,7 +4,7 @@
 	<title>dry?? cat</title>
 	<link rel="icon" href="/dry/icon.webp">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta charset="UTF-8">
 
 	<meta name="title" content="dry?? cat">
@@ -14,11 +14,16 @@
 	<meta property="og:description" content="a picture of a dry cat inside a bathtub.">
 
 	<meta property="og:image" content="/dry/dry.webp">
+	<meta name="color-scheme" content="light"/>
+	<meta name="theme-color" content="#ffcc5f"/>
+
 	<link rel="stylesheet" href="/static/soggycat/main.css">
+	<link rel="stylesheet" href="/static/soggycat/sidemenu.css">
 </head>
 
 <body data-soggy-pagetype="vtilt-js">
 	<!-- don't be fooled, he's not actually soggy here -->
+	 <div class="gradient-background"></div>
 	<img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.05" alt="a picture of a dry cat inside a bathtub."/>
 
 	<div id="sidemenu" class="sm sm-closed" inert>
