fix bug on team name
cv please stop using "ssoggycat software division". we never went through with the idea of splitting ssoggycat into divisions, and even if we had, what you are calling "ssoggycat software division" is now hydroware.

--- a/team/index.html
+++ b/team/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- nothing?? -->
-		<title> &ZeroWidthSpace; </title>
+		<title>the squad...</title>
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=1024, height=768, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimal-ui">
@@ -10,10 +10,10 @@
 		<meta property="og:image" content="/assets/images/embed.gif">
 		<link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'/>">
 
-		<meta itemprop="name" content="ssoggycat software division™">
+		<meta itemprop="name" content="ssoggycat">
 		<meta itemprop="description" content="the BEST page ever please clicky click..">
 
-		<meta name="twitter:title" content="ssoggycat software division™">
+		<meta name="twitter:title" content="ssoggycat">
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:image" content="summary">
 		<meta name="twitter:site" content="@ssoggycat">
@@ -82,18 +82,20 @@
 			<a class="title">ssoggycat</a>
 
 			<!-- i used "buddy" because i literally could not find a gender neutral term :bitingnails: -->
+			<!-- i won't forget ya buddy -->
+
 			<div class="buddypals">
 				<div class="big">
 
-					<a class="buddy left" style="width:200px" href="//x.com/cvsilly_">
+					<a class="buddy left" style="width:200px" href="https://x.com/cvsilly_">
 						<img src="/assets/images/pfp/cv.webp">
 						<span class="bigtext">cv</span>
 						<span class="smalltext">cvgd • he/they</span>
 					</a>
-					<a class="buddy right" style="width:150px;margin-top:100px" href="//discord.com/users/397799821500612638">
+					<a class="buddy right" style="width:150px;margin-top:100px" href="https://glowing.red/">
 						<img src="/assets/images/pfp/mat.webp">
 						<span class="bigtext">mat</span>
-						<span class="smalltext">m5x11 • she/her</span>
+						<span class="smalltext">M5X11 • she/her</span>
 					</a>
 
 				</div>
@@ -137,7 +139,7 @@
 						</svg>
 						<span>twitter&#46;&#46;</span>
 					</a>
-					<a class="button b2" href="//discord.gg/soggycat">
+					<a class="button b2" href="https://soggy.world/">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 							<path fill="#5865F2" d="M105 0h302c58 0 105 47 105 105v302c0 58-47 105-105 105H105C47 512 0 465 0 407V105C0 47 47 0 105 0z"/>
 							<g>
