--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimal-ui">
   <title>&nbsp;</title>
-  <link rel="icon" type="image/x-icon" href="https://soggy.cat/assets/svgs/nothing.svg">
+  <link rel="icon" type="image/x-icon" href="https://soggy.cat/assets/svgs/blank.svg">
 
   <meta itemprop="name" content="404">
   <meta itemprop="description" content="this page doesn't even exist man!! scram">
@@ -77,7 +77,6 @@
     }
 
     /* subtitles */
-
     @keyframes shake {
       0% {transform: translate(0)}
       20% {transform: translate(-1px, 1px)}
@@ -91,7 +90,6 @@
     .shake {display: inline-block; animation: shake 0.2s linear infinite both; position: relative}
 
     /* "purify" the page from browser / extension control bloat */
-
     video::-webkit-media-controls-panel {display: none !important}
     video::-internal-media-controls-overlay-cast-button {display: none !important}
     video::-webkit-media-controls {filter: invert(1) hue-rotate(180deg)}
