--- a/billy/index.html
+++ b/billy/index.html
@@ -25,14 +25,6 @@
 <body data-soggy-pagetype="vtilt-js">
 	<div class="gradient-background"></div>
     <img id="soggycat" src="/assets/images/billy.webp" data-tilt data-tilt-scale="1.05" alt="a picture of BILLY??">
-	<img class="btext1" src="/assets/images/birthdayboy.webp" width="1047" height="536"/>
-	<img class="btext2" src="/assets/images/cooltextboy.gif" width="912" height="91"/>
-	<div class="btext3">
-		<img style="pointer-events: none; width: 100%; height:auto;" src="/assets/images/willy.webp" width="480" height="270"/>
-		<p>happy birthday to <a href="https://x.com/zoingalorb">zane</a>, who isn't billy but who is rather his owner! I DONT CARE!!! I EDITED THE PAGE ANYWAYS!!!!! WOW WOW WOW!!!!!!</p>
-	</div>
-
-
 
 	<div id="sidemenu" class="sm sm-closed" inert>
 		<a aria-label="code" href="/github" target="GithubTarget">
@@ -62,10 +54,9 @@
     <span id='player' style='display: none'></span>
     <input type="file" id="picker" style="display: none" accept="image/*" />
 
-	<!--this is why i don't want to work on this website-->
-	<script src="/assets/static/soggycat/main.js"></script>
+	<script src="/static/soggycat/main.js"></script>
 
-	<script src='/assets/static/other/vanillatilt.js'></script>
-	<script src="/assets/static/other/color-thief.umd.js"></script>
+	<script src='/static/other/vanillatilt.js'></script>
+	<script src="/static/other/color-thief.umd.js"></script>
 </body>
 </html>
