--- a/website/github/index.html
+++ b/website/github/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="/assets/images/github.webp">
-<title>soggy.cat github repo!</title>
-<link href="style.css" rel="stylesheet">
-<meta http-equiv="refresh" content="7; url='//github.com/ssoggycat/soggy.cat'" />
+	<title>soggy.cat github repo!</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+	<meta charset="UTF-8"/>
+
+	<meta name="description" content="soggy.cat github..."/>
+
+	<link href="github.css" rel="stylesheet"/>
+	<meta http-equiv="refresh" content="7; url='//github.com/ssoggycat/soggy.cat'"/>
 </head>
-<body scroll="no">
-	<video id="video" width="1920" height="1080" style="width:100%; height:100%; position: absolute;"
-	loop autoplay muted playsinline>
-	<source src="/assets/videos/shattered.webm" type="video/webm">
-	whoops no video get a better browser!!!!
+<body>
+	<video id="video" width="1920" height="1080" style="width:100%; height:100%; position: absolute;" loop autoplay muted playsinline>
+		<source src="/static/ssoggycat/shared/videos/shattered.webm" type="video/webm"/>
 	</video>
 </body>
 </html>
