--- a/website/team/info/index.html
+++ b/website/team/info/index.html
@@ -6,7 +6,7 @@
 
 	<meta name="description" content="info about ssoggycat because we are sooo awesome"/>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta charset="UTF-8"/>
 
 	<link href="/static/ssoggycat/sidemenu/web/sidemenu.css" rel="stylesheet"/>
@@ -24,7 +24,7 @@
 			<div class="popup-fade">
 				<div class="popup-content-container">
 				</div>
-				<hr style="margin: 4px 0; background-color: rgba(255,255,255,0.25);">
+				<hr style="margin: 4px 0; background-color: rgba(255,255,255,0.25);"/>
 				<p class="small" style="text-align: center; font-size: 0.6666em; color: rgba(255,255,255,0.25)">Hold Shift to hide this popup</p>
 			</div>
 		</div>
