soggle + slight fixes

--- a/team/index.html
+++ b/team/index.html
@@ -7,6 +7,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=1024, height=768, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimal-ui">
 
+		<meta property="og:type" content="image">
 		<meta property="og:image" content="/assets/images/embed.gif">
 		<link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'/>">
 
@@ -116,6 +117,10 @@
 						<img src="assets/images/pfp/shobe.webp">
 						<span class="smalltext padtop">shobe</span>
 					</a>
+					<a class="small buddy" style="width:50px" href="https://x.com/_ktg5" target="_blank">
+						<img src="assets/images/pfp/ktg.webp">
+						<span class="smalltext padtop">kyle</span>
+					</a>
 
 				</div>
 
@@ -158,7 +163,10 @@
 				<a href="//yesterweb.org/no-to-web3/" popup="yesterweb.org/no-to-web3" copiable="true">
 					<img src="//s.soggy.cat/assets/images/88x31/yesterweb-web3.gif" width="88" height="31" loading="lazy">
 				</a>
-				<iframe class="increment" src="//incr.easrng.net/badge?key=sog" width="88" height="31" frameborder="0" loading="lazy"></iframe>
+				<div style="position:relative;width:88px;height:31px;display:inline-block;">
+					<iframe class="increment" src="//incr.easrng.net/badge?key=sog" width="88" height="31" frameborder="0" loading="lazy" style="position:absolute;top:0;left:0;z-index:1;"></iframe>
+					<div style="position:absolute;top:0;left:0;width:88px;height:31px;z-index:2;pointer-events:none;background-image:url('assets/images/88x31/easrng-increment.gif')"></div>
+				</div>
 			</div>
 
 			<div class="footer">
