--- a/website/2024election/index.html
+++ b/website/2024election/index.html
@@ -1,36 +1,31 @@
-  <!DOCTYPE htmat can do it ten times better>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <html lang="en">
-    <head>
+	<title>VOTE NOW</title>
+	<link rel="icon" href="/static/ssoggycat/team/images/soggymask.webp"/>
 
-      <meta charset="UTF-8" />
-      <title>&#65279;</title>
-      <meta property="og:title" content="VOTE NOW" />
-      <meta name="description" content="You've been tasked with saving an oddly small sopping wet cat from drowning in a bathtub. Would you have enough kindness to save it from its demise?" />
+	<meta property="og:title" content="VOTE NOW"/>
 
-      <link rel="icon" href="/team/assets/images/soggymask.webp" />
+	<meta name="description" content="You've been tasked with saving an oddly small sopping wet cat from drowning in a bathtub. Would you have enough kindness to save it from its demise?" />
 
-      <meta name="twitter:card" content="summary"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="theme-color" content="#64DAFF"/>
+	<meta name="twitter:card" content="summary"/>
+	<meta name="theme-color" content="#64DAFF"/>
 
-      <link href="style.css" rel="stylesheet" type="text/css"/>
-      <script src="script.js"></script>
-
-    </head>
-    
- <body>
-   
-  <div class="result">
-    <label class="option-01">
-      <span class="one" onclick="window.open('../assets/videos/awesome.mp4')">SOGGY FREEDOM</span>
-      <input name="Choice" type="radio">
-    </label>
-    <label class="option-02">
-      <img class="two" src="../assets/images/cool.gif" onclick="window.open('assets/NOOO.mp4')"></img>
-      <input name="Choice" type="radio">
-    </label>
-  </div>
-   
- </body>
+	<link href="2024election.css" rel="stylesheet"/>
+</head>
+<body>
+	<div class="result">
+		<label class="option-01">
+			<span class="one" onclick="window.open('/static/ssoggycat/2024election/videos/awesome.mp4')">SOGGY FREEDOM</span>
+			<input name="Choice" type="radio"/>
+		</label>
+		<label class="option-02">
+			<img class="two" src="/static/ssoggycat/2024election/images/cool.gif" onclick="window.open('/static/ssoggycat/2024election/videos/NOOO.mp4')"/>
+			<input name="Choice" type="radio"/>
+		</label>
+	</div>
+</body>
 </html>
