--- a/soggle/index.html
+++ b/soggle/index.html
@@ -361,7 +361,7 @@
 
     <script>
         const ctx = document.querySelector(".sog").getContext("2d");
-        const hinthardlabels = {16: "⅛", 8: "¼", 4: "¼", 2: "½"};
+        const hinthardlabels = {8: "⅛", 4: "¼", 2: "½"};
         const positions = ["top", "bottom", "left", "right"];
 
         function updatehinthard() {
